--- a/screens/templates/screens/basic_screen.html
+++ b/screens/templates/screens/basic_screen.html
@@ -1,13 +1,15 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="refresh" content="3600"/>
+    <meta http-equiv="refresh" content="3600" />
     <meta charset="UTF-8">
     <title>Screens</title>
     <script src="{% static 'admin/js/vendor/jquery/jquery.min.js' %} " type="text/javascript" charset="utf-8"></script>
     <script src="{% static 'admin/js/jquery.init.js' %} " type="text/javascript" charset="utf-8"></script>
+    <script id="youtube-iframe-api" src="https://www.youtube.com/iframe_api"></script>
     <style>
         * {
             padding: 0;
@@ -44,95 +46,119 @@
             object-fit: fill;
             position: absolute;
             z-index: -10;
-            border: 0
+            border: 0;
         }
     </style>
 </head>
 
 <body>
-{% for source in playlist %}
+    {% for source in playlist %}
     {% include "screens/display_source.html" with source=source %}
     {% if interspersed %}
-        {% include "screens/display_source.html" with source=interspersed %}
+    {% include "screens/display_source.html" with source=interspersed %}
     {% endif %}
     {% if screen_interspersed %}
-        {% include "screens/display_source.html" with source=screen_interspersed %}
+    {% include "screens/display_source.html" with source=screen_interspersed %}
     {% endif %}
-{% empty %}
+    {% empty %}
     {% if interspersed %}
-        {% include "screens/display_source.html" with source=interspersed %}
+    {% include "screens/display_source.html" with source=interspersed %}
     {% endif %}
     {% if screen_interspersed %}
-        {% include "screens/display_source.html" with source=screen_interspersed %}
+    {% include "screens/display_source.html" with source=screen_interspersed %}
     {% endif %}
-{% endfor %}
-<script>
-    //Marketing Screen Slideshow
-    // Original JS CSS and HTML Made by Thew & Charlie 2018
-    var displaytime = 10000;
-    var x = document.getElementsByClassName("advert");
-    var i = 0;
-    var current_playlist = {{ current_playlist }};
-    var playlist_last_updated = "{{ playlist_last_updated }}";
+    {% endfor %}
+    <script>
+        //Marketing Screen Slideshow
+        // Original JS CSS and HTML Made by Thew & Charlie 2018
+        var displaytime = 10000;
+        var x = document.getElementsByClassName("advert");
+        var i = 0;
+        var current_playlist = {{ current_playlist }};
+        var playlist_last_updated = "{{ playlist_last_updated }}";
+        var yt_players = {};
 
-    window.onload = function () {
-        screentest();
-        window.setInterval(check_for_changes, 1000 * 60);
-        for(let j = 0; j < x.length; j++) {
-          if (django.jQuery(x[j]).hasClass('video') === true) {
-            x[j].currentTime = 0;
-          }
-        }
-    };
+        window.onload = function () {
+            screentest();
+            window.setInterval(check_for_changes, 1000 * 60);
+            for (let j = 0; j < x.length; j++) {
+                if (django.jQuery(x[j]).hasClass('video') === true) {
+                    x[j].currentTime = 0;
+                } else if (django.jQuery(x[j]).hasClass('tube')) {
+                    yt_players[j] = new YT.Player(x[j]);
+                    yt_players[j].addEventListener("onStateChange", (event) => {
+                        if (event.data != YT.PlayerState.ENDED) { return }
+                        player.stopVideo();
+                        x[i].style.opacity = 0;
+                        console.warn("ended video")
+                        
+                        i = i + 1;
+                        screentest();
+                    })
+                }
+            }
+        };
 
-    function screentest() {
-        i = i % x.length;
-        if (django.jQuery(x[i]).hasClass('video') === true) {
-            if (x[i].readyState == 4) {
+        function screentest() {
+            i = i % x.length;
+            if (django.jQuery(x[i]).hasClass('video') === true) {
+                if (x[i].readyState == 4) {
+                    x[i].style.opacity = 1;
+                    x[i].play();
+                    x[i].onended = function () {
+                        x[i].style.opacity = 0;
+                        if (x.length == 1) {
+                            x[i].currentTime = 0;
+                        } else {
+                            let j = i;
+                            window.setTimeout(
+                                function () {
+                                    x[j].currentTime = 0
+                                },
+                                2000)
+                        }
+                        i = i + 1;
+                        screentest();
+                    };
+                } else {
+                    i += 1;
+                    window.setTimeout(screentest, 500)
+                }
+            } else if (django.jQuery(x[i]).hasClass('tube') === true) {
+                player = yt_players[i];
+                if (player.playVideo) {
+                    x[i].style.opacity = 1;
+                    return player.playVideo();
+                }
+                player.addEventListener("onReady", () => {
+                    console.info("player ready")
+                    x[i].style.opacity = 1;
+                    player.playVideo()
+                })
+            } else if (django.jQuery(x[i]).hasClass('image') === true) {
                 x[i].style.opacity = 1;
-                x[i].play();
-                x[i].onended = function () {
-                    x[i].style.opacity = 0;
-                    if (x.length == 1){
-                      x[i].currentTime = 0;
-                    } else {
-                        let j = i;
-                        window.setTimeout(
-                            function () {
-                                x[j].currentTime = 0
-                            },
-                            2000)
-                    }
-                    i = i + 1;
-                    screentest();
-                };
-            } else {
-                i += 1;
-                window.setTimeout(screentest, 500)
-            }
-        } else if (django.jQuery(x[i]).hasClass('image') === true) {
-            x[i].style.opacity = 1;
-            let duration = x[i].dataset.duration ? parseInt(x[i].dataset.duration * 1000) : displaytime;
-            window.setTimeout(screentest, duration + 1);
-            window.setTimeout(fadeout, duration);
+                let duration = x[i].dataset.duration ? parseInt(x[i].dataset.duration * 1000) : displaytime;
+                window.setTimeout(screentest, duration + 1);
+                window.setTimeout(fadeout, duration);
 
-            function fadeout() {
-                x[i].style.opacity = 0;
-                i = i + 1;
+                function fadeout() {
+                    x[i].style.opacity = 0;
+                    i = i + 1;
+                }
             }
         }
-    }
 
-    function check_for_changes() {
-        django.jQuery.getJSON("{% url "screen-meta-view" %}", success = (data) => {
-            let change = false;
-            change = data['current_playlist'] != current_playlist;
-            change = change || (data['playlist_last_updated'] != playlist_last_updated);
-            if (change) {
-                location.reload();
-            }
-        })
-    }
-</script>
+        function check_for_changes() {
+            django.jQuery.getJSON("{% url "screen-meta-view" %}", success = (data) => {
+                let change = false;
+                change = data['current_playlist'] != current_playlist;
+                change = change || (data['playlist_last_updated'] != playlist_last_updated);
+                if (change) {
+                    location.reload();
+                }
+            })
+        }
+    </script>
 </body>
+
 </html>
