--- a/screens/templates/screens/basic_screen.html
+++ b/screens/templates/screens/basic_screen.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="refresh" content="3600" />
+<!--    <meta http-equiv="refresh" content="3600" /> -->
     <meta charset="UTF-8">
     <title>Screens</title>
     <script src="{% static 'admin/js/vendor/jquery/jquery.min.js' %} " type="text/javascript" charset="utf-8"></script>
