--- a/screens/templates/screens/source_preview.html
+++ b/screens/templates/screens/source_preview.html
@@ -15,6 +15,6 @@
             {% endif %}
     ></iframe>
 {% elif source.source.type == "YTV" %}
-    <iframe src="https://{{ source.source.url }}?controls=0&enablejsapi=1&iv_load_policy=3" class="advert tube" allow="autoplay"
+    <iframe src="https://www.youtube-nocookie.com/embed/{{ source.source.ytid }}?controls=0&enablejsapi=1&iv_load_policy=3" class="advert tube" allow="autoplay"
     ></iframe>
 {% endif %}
